--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@eva-design/eva": "^2.0.0",
     "@gorhom/bottom-sheet": "^2",
     "@react-native-async-storage/async-storage": "^1.14.1",
+    "@react-native-clipboard/clipboard": "^1.8.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/analytics": "^11.0.0",
     "@react-native-firebase/app": "^11.0.0",
@@ -31,7 +32,9 @@
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-file-viewer": "^2.1.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-html-to-pdf": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "1",
     "react-native-safe-area-context": "^3.1.9",
